@@ -40,7 +40,9 @@ sunuo (0.3.2) unstable; urgency=low
       - GenericSellInfo.m_Table
       - BaseWeapon.m_AosAttributes
       - BaseWeapon.m_AosWeaponAttributes
-      - Guild.m_Allies, Guild.m_Enemies
+      - Guild.m_Allies, Guild.m_Enemies, Guild.m_WarDeclarations,
+        Guild.m_WarInvitations, Guild.m_AllyDeclarations,
+        Guild.m_AllyInvitations
     - use XmlReader instead of XmlDocument.Load() to parse the accounts file
     - use DateTime.Now cache
   * moved into separate script libraries:
